Updated 2 files via CloudCannon.

--- a/src/pages/404.html
+++ b/src/pages/404.html
@@ -2,9 +2,12 @@
 title:
 layout:
 permalink:
-draft: 
+draft:
 eleventyExcludeFromCollections: false
 content_blocks:
+  - _bookshop_name: generic/sample
+    text:
+  - _bookshop_name: generic/sample
+    text:
 ---
-
 <h1>404</h1>
