Updated 1 file via CloudCannon.

--- a/src/pages/404.html
+++ b/src/pages/404.html
@@ -4,10 +4,6 @@ layout:
 permalink:
 draft:
 eleventyExcludeFromCollections: false
-content_blocks:
-  - _bookshop_name: generic/sample
-    text:
-  - _bookshop_name: generic/sample
-    text:
+content_blocks: []
 ---
 <h1>404</h1>
