--- a/src/pages/booking.html
+++ b/src/pages/booking.html
@@ -5,6 +5,9 @@ permalink: /booking/
 draft: false
 eleventyExcludeFromCollections: false
 content_blocks:
+  - _bookshop_name: generic/icon
+    svg_icon: solid/academic-cap
+    big_icon: true
+    rounded_border: false
 ---
-
 <h1>booking</h1>
