Updated 1 file via CloudCannon.

--- a/src/pages/booking.html
+++ b/src/pages/booking.html
@@ -9,5 +9,11 @@ content_blocks:
     svg_icon: solid/academic-cap
     big_icon: true
     rounded_border: false
+  - _bookshop_name: generic/sample
+    text:
+    styles:
+      background_variant: Light
+  - _bookshop_name: generic/sample
+    text:
 ---
 <h1>booking</h1>
