Updated 1 file via CloudCannon.

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -12,7 +12,7 @@ content_blocks:
         _bookshop_name: generic/icon
         svg_icon: outline/arrow-long-up
         big_icon: true
-        rounded_border: false
+        rounded_border: true
 ---
 <h1>Home</h1>
 
