--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -6,17 +6,17 @@ draft: false
 eleventyExcludeFromCollections: false
 content_blocks:
     -
-        _bookshop_name: generic/sample
-        text: Hello World!
-    -
         _bookshop_name: generic/icon
         svg_icon: outline/arrow-long-up
         big_icon: true
         rounded_border: true
 ---
+
 <h1>Home</h1>
 
-<div style="background-color: black;" <img src="/assets/images/icons/social/facebook.svg" alt="">
+<div style="background-color: black;">
+
+  <img src="/assets/images/icons/social/facebook.svg" alt="">
   <img src="/assets/images/icons/social/instagram.svg" alt="" />
   <img src="/assets/images/icons/social/linkedin.svg" alt="" />
   <img src="/assets/images/icons/social/x.svg" alt="" />
