--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -6,8 +6,12 @@ draft: false
 eleventyExcludeFromCollections: false
 content_blocks: 
     - _bookshop_name: generic/sample 
-      text: Hello World!
-
+      text: Hello World!s
+    - _bookshop_name: generic/image 
+      url1: /assets/images/card-grid/Card-grid--image-1.png
+      url2: /assets/images/card-grid/Card-grid--image-2.png
+      url3: /assets/images/card-grid/Card-grid--image-3.png
 ---
 
 
+<h1>hello</h1>
