Updated 1 file via CloudCannon.

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,22 +1,25 @@
 ---
 title: Home
 layout: layouts/page.html
-permalink: / 
+permalink: /
 draft: false
 eleventyExcludeFromCollections: false
-content_blocks: 
-    - _bookshop_name: generic/sample 
-      text: Hello World!
-
+content_blocks:
+    -
+        _bookshop_name: generic/sample
+        text: Hello World!
+    -
+        _bookshop_name: generic/component-heading
+        eyebrow_headline: Eyebrow Heading
+        primary_heading: Primary heading text goes here
+        text_alignment: center
 ---
-
 <h1>Home</h1>
 
-<div style="background-color: black;"
-  <img src="/assets/images/icons/social/facebook.svg" alt="">
-  <img src="/assets/images/icons/social/instagram.svg" alt="">
-  <img src="/assets/images/icons/social/linkedin.svg" alt="">
-  <img src="/assets/images/icons/social/x.svg" alt="">
-  <img src="/assets/images/icons/social/youtube.svg" alt="">
+<div style="background-color: black;" <img src="/assets/images/icons/social/facebook.svg" alt="">
+  <img src="/assets/images/icons/social/instagram.svg" alt="" />
+  <img src="/assets/images/icons/social/linkedin.svg" alt="" />
+  <img src="/assets/images/icons/social/x.svg" alt="" />
+  <img src="/assets/images/icons/social/youtube.svg" alt="" />
 </div>
 
