--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -7,9 +7,10 @@ eleventyExcludeFromCollections: false
 content_blocks:
     -
         _bookshop_name: generic/icon
-        svg_icon: outline/arrow-long-up
-        big_icon: true
-        rounded_border: true
+        svg_icon: solid/academic-cap
+        big_icon: false
+        rounded_border: false
+        icon_fill_color: gray
 ---
 
 <h1>Home</h1>
