--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -5,4 +5,14 @@ permalink: /
 draft: false
 eleventyExcludeFromCollections: false
 content_blocks:
+  - _bookshop_name: generic/labelled-icon
+    icon_orientation: Stacked
+    text: Great customer service
+    icons:
+      - svg_icon:
+          _bookshop_name: generic/icon
+          svg_icon: outline/academic-cap
+          big_icon: true
+          rounded_border: false
+          icon_fill_color: '#ff0000'
 ---
