Updated 1 file via CloudCannon.

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -4,10 +4,5 @@ layout: layouts/page.html
 permalink: /
 draft: false
 eleventyExcludeFromCollections: false
-content_blocks:
-  - _bookshop_name: generic/icon
-    svg_icon: solid/academic-cap
-    icon_size: small
-    rounded_border: true
-    color: '#4545d4'
+content_blocks: []
 ---
