Updated 1 file via CloudCannon.

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -4,15 +4,5 @@ layout: layouts/page.html
 permalink: /
 draft: false
 eleventyExcludeFromCollections: false
-content_blocks:
-  - _bookshop_name: generic/labelled-icon
-    icon_orientation: Stacked
-    text: Great customer service
-    icons:
-      - svg_icon:
-          _bookshop_name: generic/icon
-          svg_icon: outline/academic-cap
-          big_icon: true
-          rounded_border: false
-          icon_fill_color: '#ff0000'
+content_blocks: []
 ---
