Chore: remove component from page

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -4,9 +4,5 @@ layout: layouts/page.html
 permalink: /
 draft: false
 eleventyExcludeFromCollections: false
-content_blocks:
-  - _bookshop_name: simple/google-map-embed
-    latitude: '-45'
-    longitude: '170'
-    zoom_level:
+content_blocks: []
 ---
