Updated 1 file via CloudCannon.

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -4,5 +4,16 @@ layout: layouts/page.html
 permalink: /
 draft: false
 eleventyExcludeFromCollections: false
-content_blocks: []
+content_blocks:
+  - _bookshop_name: structure/left-right-block
+    content:
+      eyebrow_headline:
+      primary_heading:
+      content:
+      buttons: []
+      icons: []
+    styles:
+      orientation:
+      image:
+      background_variant: Dark
 ---
