Updated 1 file via CloudCannon.

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -5,4 +5,26 @@ permalink: /
 draft: false
 eleventyExcludeFromCollections: false
 content_blocks:
+  - _bookshop_name: structure/left-right-block
+    content:
+      heading:
+        _bookshop_name: generic/component-heading
+        eyebrow_headline: Eyebrow Heading
+        primary_heading: Primary Heading
+      content:
+      buttons:
+        - label: Test button
+      icons:
+        - _bookshop_name: generic/labelled-icon
+          arrangement: inline
+          text: Icon text
+          icon:
+            _bookshop_name: generic/icon
+            svg_icon: outline/wifi
+            icon_size: small
+            rounded_border: true
+            color: '#f9f9fb'
+    styles:
+      orientation:
+      image:
 ---
