Updated 1 file via CloudCannon.

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -6,23 +6,23 @@ draft: false
 eleventyExcludeFromCollections: false
 content_blocks:
   - _bookshop_name: structure/left-right-block
-    content:
+    data:
       heading:
         _bookshop_name: generic/component-heading
         eyebrow_headline: Eyebrow Heading
         primary_heading: Primary Heading
-      content:
+      content: Content
       buttons:
         - label: Test button
       icons:
         - _bookshop_name: generic/labelled-icon
-          arrangement: inline
+          arrangement: stacked
           text: Icon text
           icon:
             _bookshop_name: generic/icon
-            svg_icon: outline/wifi
+            svg_icon: solid/academic-cap
             icon_size: small
-            rounded_border: true
+            rounded_border: false
             color: '#f9f9fb'
     styles:
       orientation:
