--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -25,6 +25,6 @@ content_blocks:
             rounded_border: false
             color: '#f9f9fb'
     styles:
-      orientation:
+      orientation: Left
       image:
 ---
