Updated 2 files via CloudCannon.

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -26,5 +26,5 @@ content_blocks:
             color: '#f9f9fb'
     styles:
       orientation: Left
-      image:
+      image: /uploads/one-piece-square-universal-base-na-01-zxx.jpg
 ---
