--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -11,18 +11,55 @@ content_blocks:
         _bookshop_name: generic/component-heading
         eyebrow_headline: Eyebrow Heading
         primary_heading: Primary Heading
-      content: Content
+      content: A classic component, you can select to have your image to the left or the right, add a button or two, and give the viewer a quick intro to your brand.
       buttons:
-        - label: Test button
+        - label: Book Now
+        - label: Cancel Booking
       icons:
         - _bookshop_name: generic/labelled-icon
           arrangement: stacked
-          text: Icon text
+          text: 100% Happy customer reviews
           icon:
             _bookshop_name: generic/icon
             svg_icon: solid/academic-cap
-            icon_size: small
-            rounded_border: false
+            icon_size: large
+            rounded_border: true
+            color: '#f9f9fb'
+        - _bookshop_name: generic/labelled-icon
+          arrangement: stacked
+          text: Great customer service
+          icon:
+            _bookshop_name: generic/icon
+            svg_icon: solid/archive-box
+            icon_size: large
+            rounded_border: true
+            color: '#f9f9fb'
+        - _bookshop_name: generic/labelled-icon
+          arrangement: stacked
+          text: Outstanding product reviews
+          icon:
+            _bookshop_name: generic/icon
+            svg_icon: solid/banknotes     
+            icon_size: large
+            rounded_border: true
+            color: '#f9f9fb'
+        - _bookshop_name: generic/labelled-icon
+          arrangement: stacked
+          text: Outstanding product reviews
+          icon:
+            _bookshop_name: generic/icon
+            svg_icon: solid/banknotes     
+            icon_size: large
+            rounded_border: true
+            color: '#f9f9fb'
+        - _bookshop_name: generic/labelled-icon
+          arrangement: stacked
+          text: Outstanding product reviews
+          icon:
+            _bookshop_name: generic/icon
+            svg_icon: solid/banknotes     
+            icon_size: large
+            rounded_border: true
             color: '#f9f9fb'
     styles:
       orientation: Left
