Updated 1 file via CloudCannon.

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -4,5 +4,30 @@ layout: layouts/page.html
 permalink: /
 draft: false
 eleventyExcludeFromCollections: false
-content_blocks: []
+content_blocks:
+  - _bookshop_name: simple/content-block
+    heading:
+      _bookshop_name: generic/component-heading
+      eyebrow_headline: Eyebrow Heading
+      primary_heading: Primary Heading
+    content:
+      _bookshop_name: generic/text-block
+      text: >-
+        ### How do I use the service?
+
+
+        Customers want to know all the information before making a final
+        decision. Make sure you provide it to them.
+
+
+        ### How do I pay for the service?
+
+
+        Let your customers know if they can pay by EFTPOS or credit card.
+
+
+        ### How awesome are you?
+
+
+        We’re pretty awesome.
 ---
