Updated 1 file via CloudCannon.

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -9,7 +9,7 @@ content_blocks:
     heading:
       _bookshop_name: generic/component-heading
       eyebrow_headline: Eyebrow Heading
-      primary_heading: Primary Heading
+      primary_heading: A simple text block for your FAQs
     content:
       _bookshop_name: generic/text-block
       text: >-
