--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -64,4 +64,5 @@ content_blocks:
     styles:
       orientation: Left
       image: /uploads/one-piece-square-universal-base-na-01-zxx.jpg
+      background_variant: "Dark"
 ---
