add index example for testing

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -4,5 +4,13 @@ layout: layouts/page.html
 permalink: /
 draft: false
 eleventyExcludeFromCollections: false
-content_blocks: []
+content_blocks: 
+  - _bookshop_name: generic/button
+    url: '#'
+    text: Hello World!
+    variant: primary
+    disabled: false
+    arrow: right
+    onclick: console.log("test")
+    id: ''
 ---
