Updated 'src/pages/index.html' via CloudCannon

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -4,7 +4,7 @@ layout: layouts/page.html
 permalink: /
 draft: false
 eleventyExcludeFromCollections: false
-content_blocks: 
+content_blocks:
   - _bookshop_name: generic/button
     url: '#'
     text: Hello World!
@@ -12,5 +12,13 @@ content_blocks:
     disabled: false
     arrow: right
     onclick: console.log("test")
+    id: ''
+  - _bookshop_name: generic/button
+    url: '#'
+    text: Hello World!
+    variant: primary
+    disabled: false
+    arrow: right
+    onclick: ''
     id: ''
 ---
