Updated 'src/pages/index.html' via CloudCannon

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -21,4 +21,20 @@ content_blocks:
     arrow: right
     onclick: ''
     id: ''
+  - _bookshop_name: generic/social-icons
+    social_media_links:
+      - link_url: https://www.youtube.com/
+        svg_icon: /assets/images/icons/social/youtube.svg
+      - link_url: https://www.facebook.com/
+        svg_icon: /assets/images/icons/social/facebook.svg
+      - link_url: https://www.linkedin.com/
+        svg_icon: /assets/images/icons/social/linkedin.svg
+      - link_url: https://www.twitter.com/
+        svg_icon: /assets/images/icons/social/x.svg
+      - link_url: https://www.instagram.com/
+        svg_icon: /assets/images/icons/social/instagram.svg
+    style:
+      icon_background_hover_color: '#f9f9fb'
+      icon_color: '#f9f9fb'
+      icon_hover_color: '#000000'
 ---
