--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -24,21 +24,15 @@ content_blocks:
             label: Checkbox group
             id: 51925dec-314e-4ebf-aeb6-b0de4f03da84
             checkboxes:
-              - _bookshop_name: generic/form/checkbox-input
-                group_name:
-                label: Checkbox 1
+              - label: Checkbox 1
                 id: 0bb9d85c-017e-483c-bcb6-3cf842ba0468
                 checked: true
                 required: false
-              - _bookshop_name: generic/form/checkbox-input
-                group_name:
-                label: Checkbox 2
+              - label: Checkbox 2
                 id: bd126f91-44da-4de0-a371-fd08a711efb4
                 checked: false
                 required: false
-              - _bookshop_name: generic/form/checkbox-input
-                group_name:
-                label: Checkbox 3
+              - label: Checkbox 3
                 id: fa24b997-f0c0-46eb-b7d0-02b4b5aa2e1e
                 checked: false
                 required: false
