Updated 1 file via CloudCannon.

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -21,19 +21,19 @@ content_blocks:
         success_page: /
         inputs:
           - _bookshop_name: generic/form/checkbox-group
-            label: Checkbox group
-            id: 51925dec-314e-4ebf-aeb6-b0de4f03da84
+            label: Checkbox Group
+            id: 0f7b71c4-d27d-4928-b2a5-d68d4209d14b
             checkboxes:
               - label: Checkbox 1
-                id: 0bb9d85c-017e-483c-bcb6-3cf842ba0468
+                id: 6a28d8f3-3d6d-4f0f-bc07-633ca4459709
                 checked: true
                 required: false
               - label: Checkbox 2
-                id: bd126f91-44da-4de0-a371-fd08a711efb4
+                id: f2da01ae-e94e-4317-9dd4-26188e6fe41b
                 checked: false
                 required: false
               - label: Checkbox 3
-                id: fa24b997-f0c0-46eb-b7d0-02b4b5aa2e1e
+                id: dbc2a326-b7a7-4715-8fec-772ca6ceff9a
                 checked: false
                 required: false
             arrangement: inline
@@ -88,6 +88,16 @@ content_blocks:
               - name: Option 1
               - name: Option 2
             helper_text:
+          - _bookshop_name: generic/form/checkbox-group
+            label: Terms and conditions
+            id: d96a86c0-5020-49c3-84ef-40857ed63d13
+            checkboxes:
+              - label: Do you accept the terms and conditions?
+                id: 5f964cfc-0d50-441f-a103-4017da5f5825
+                checked: false
+                required: true
+            arrangement: inline
+            helper_text: Terms and conditions can be found at /terms-and-conditions
     styles:
       background_variant: light
       content_alignment: center
