--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -4,5 +4,8 @@ layout: layouts/page.html
 permalink: /
 draft: false
 eleventyExcludeFromCollections: false
-content_blocks: []
+content_blocks:
+  - _bookshop_name: generic/image
+    image_path: /assets/images/Testimonial--background-feature.png
+    image_alt: A woman laughing
 ---
