--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -4,8 +4,5 @@ layout: layouts/page.html
 permalink: /
 draft: false
 eleventyExcludeFromCollections: false
-content_blocks:
-  - _bookshop_name: generic/image
-    image_path: /assets/images/Testimonial--background-feature.png
-    image_alt: A woman laughing
+content_blocks: []
 ---
