Updated 'src/pages/index.html' via CloudCannon
Co-authored-by: Jan Claasen <jan@cloudcannon.com>
Co-authored-by: Alysha Jo Nolan <alysha@cloudcannon.com>

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -17,7 +17,7 @@ content_blocks:
     url: '#'
     text: Hello World!
     variant: primary
-    disabled: false
+    disabled: true
     arrow: right
     onclick: ''
     id: ''
@@ -37,4 +37,20 @@ content_blocks:
       icon_background_hover_color: '#f9f9fb'
       icon_color: '#f9f9fb'
       icon_hover_color: '#000000'
+  - _bookshop_name: generic/button
+    url: '#'
+    text: Hello World!
+    variant: secondary
+    disabled: false
+    arrow: down
+    onclick: ''
+    id: ''
+  - _bookshop_name: generic/button
+    url: '#'
+    text: Hello World!
+    variant: secondary
+    disabled: true
+    arrow: right
+    onclick: ''
+    id: ''
 ---
