--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -4,5 +4,55 @@ layout: layouts/page.html
 permalink: /
 draft: false
 eleventyExcludeFromCollections: false
-content_blocks: []
+content_blocks:
+  - _bookshop_name: sections/hero
+    variant: background-image-feature
+    background:
+      image:
+        _bookshop_name: generic/image
+        image_path: /uploads/brooke-cagle-8jp-6sjvibm-unsplash.jpg
+        image_alt: smily  woman
+    content:
+      heading:
+        _bookshop_name: generic/component-heading
+        eyebrow_headline: a small business template
+        primary_heading: Empower Your Business with This Brilliant Template
+      button:
+        _bookshop_name: generic/button
+        url: '#'
+        open_in_new_tab: false
+        text: Book now
+        variant: primary
+        disabled: false
+        arrow: right
+        onclick:
+      description: >-
+        We wanted you to have a couple of options to use above the fold, and
+        give you the customisation you need to display your product/service in
+        the best way possible.
+  - _bookshop_name: sections/hero
+    variant: left-right-feature
+    background:
+      image:
+        _bookshop_name: generic/image
+        image_path: /assets/images/Hero--background-feature-2.png
+        image_alt: sparkly woman
+    content:
+      heading:
+        _bookshop_name: generic/component-heading
+        eyebrow_headline: tag or label headline
+        primary_heading: A hero component to showcase your brand
+      button:
+        _bookshop_name: generic/button
+        url: '#'
+        open_in_new_tab: false
+        text: Book now
+        variant: primary
+        disabled: false
+        arrow: right
+        onclick:
+      description: >-
+        We wanted you to have a couple of options to use above the fold, and
+        give you the customisation you need to display your product/service in
+        the best way possible.
 ---
