Updated 1 file via CloudCannon.

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -26,10 +26,7 @@ content_blocks:
         disabled: false
         arrow: right
         onclick:
-      description: >-
-        We wanted you to have a couple of options to use above the fold, and
-        give you the customisation you need to display your product/service in
-        the best way possible.
+      description:
   - _bookshop_name: sections/hero
     variant: left-right-feature
     background:
