--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -4,31 +4,5 @@ layout: layouts/page.html
 permalink: /
 draft: false
 eleventyExcludeFromCollections: false
-content_blocks:
-  - _bookshop_name: sections/centered-large-asset
-    content:
-      heading:
-        _bookshop_name: generic/component-heading
-        eyebrow_headline: Eyebrow Heading
-        primary_heading: Primary Heading
-      description: Description text to compliment the block
-      asset:
-        _bookshop_name: generic/video
-        video_source: YouTube
-        video_url: https://www.youtube.com/watch?v=LeqKIzeZel4
-        fallback_image:
-          _bookshop_name: generic/image
-          image_path:
-          image_alt:
-      button:
-        _bookshop_name: generic/button
-        url: '#'
-        open_in_new_tab: false
-        text: Button text
-        variant: primary
-        disabled: false
-        arrow: right
-        onclick:
-    styles:
-      background_variant: light
+content_blocks: []
 ---
