--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -5,64 +5,52 @@ permalink: /
 draft: false
 eleventyExcludeFromCollections: false
 content_blocks:
-  - _bookshop_name: structure/left-right-block
-    data:
+  - _bookshop_name: sections/contact-block
+    content:
       heading:
         _bookshop_name: generic/component-heading
-        eyebrow_headline: Eyebrow Heading
-        primary_heading: Primary Heading
-      content: A classic component, you can select to have your image to the left or the right, add a button or two, and give the viewer a quick intro to your brand.
-      buttons:
-        - label: Book Now
-        - label: Cancel Booking
-      icons:
-        - _bookshop_name: generic/labelled-icon
-          arrangement: stacked
-          text: 100% Happy customer reviews
-          icon:
-            _bookshop_name: generic/icon
-            svg_icon: solid/academic-cap
-            icon_size: large
+        primary_heading: A contact block
+      description: 
+        text: A classic component, you can select to have your image to the left or the right, add a button or two, and give the viewer a quick intro to your brand.
+      contact_details:
+        - icon: 
             rounded_border: true
-            color: '#f9f9fb'
-        - _bookshop_name: generic/labelled-icon
-          arrangement: stacked
-          text: Great customer service
-          icon:
-            _bookshop_name: generic/icon
-            svg_icon: solid/archive-box
-            icon_size: large
+            color: white
+            icon_size: small
+            icon_type: outline
+            hero_icon_name: envelope
+          text: 'Email address: mybusiness@business.com'
+        - icon: 
             rounded_border: true
-            color: '#f9f9fb'
-        - _bookshop_name: generic/labelled-icon
-          arrangement: stacked
-          text: Outstanding product reviews
-          icon:
-            _bookshop_name: generic/icon
-            svg_icon: solid/banknotes     
-            icon_size: large
+            color: white
+            icon_size: small
+            icon_type: outline
+            hero_icon_name: envelope
+          text: 'Email address: mybusiness@business.com'
+        - icon: 
             rounded_border: true
-            color: '#f9f9fb'
-        - _bookshop_name: generic/labelled-icon
-          arrangement: stacked
-          text: Outstanding product reviews
-          icon:
-            _bookshop_name: generic/icon
-            svg_icon: solid/banknotes     
-            icon_size: large
+            color: white
+            icon_size: small
+            icon_type: outline
+            hero_icon_name: envelope
+          text: 'Email address: mybusiness@business.com'
+        - icon: 
             rounded_border: true
-            color: '#f9f9fb'
-        - _bookshop_name: generic/labelled-icon
-          arrangement: stacked
-          text: Outstanding product reviews
-          icon:
-            _bookshop_name: generic/icon
-            svg_icon: solid/banknotes     
-            icon_size: large
-            rounded_border: true
-            color: '#f9f9fb'
-    styles:
-      orientation: Left
-      image: /uploads/one-piece-square-universal-base-na-01-zxx.jpg
-      background_variant: "Dark"
+            color: white
+            icon_size: small
+            icon_type: outline
+            hero_icon_name: envelope
+          text: 'Email address: mybusiness@business.com'
+      
+      button:
+        _bookshop_name: generic/button
+        url: '#'
+        open_in_new_tab: false
+        text: Button text
+        variant: primary
+        disabled: false
+        arrow: right
+        onclick:   
+      styles:
+        background_variant: light
 ---
