Updated 1 file via CloudCannon.

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -10,38 +10,11 @@ content_blocks:
       heading:
         _bookshop_name: generic/component-heading
         primary_heading: A contact block
-      description: 
-        text: A classic component, you can select to have your image to the left or the right, add a button or two, and give the viewer a quick intro to your brand.
-      contact_details:
-        - icon: 
-            rounded_border: true
-            color: white
-            icon_size: small
-            icon_type: outline
-            hero_icon_name: envelope
-          text: 'Email address: mybusiness@business.com'
-        - icon: 
-            rounded_border: true
-            color: white
-            icon_size: small
-            icon_type: outline
-            hero_icon_name: envelope
-          text: 'Email address: mybusiness@business.com'
-        - icon: 
-            rounded_border: true
-            color: white
-            icon_size: small
-            icon_type: outline
-            hero_icon_name: envelope
-          text: 'Email address: mybusiness@business.com'
-        - icon: 
-            rounded_border: true
-            color: white
-            icon_size: small
-            icon_type: outline
-            hero_icon_name: envelope
-          text: 'Email address: mybusiness@business.com'
-      
+      description:
+        text: >-
+          A classic component, you can select to have your image to the left or
+          the right, add a button or two, and give the viewer a quick intro to
+          your brand.
       button:
         _bookshop_name: generic/button
         url: '#'
@@ -50,7 +23,55 @@ content_blocks:
         variant: primary
         disabled: false
         arrow: right
-        onclick:   
-      styles:
-        background_variant: light
+        onclick:
+      icons:
+        - _bookshop_name: generic/labelled-icon
+          arrangement: inline
+          text: where
+          icon:
+            _bookshop_name: generic/icon
+            hero_icon_name: archive-box-arrow-down
+            icon_size: small
+            icon_type: solid
+            rounded_border: true
+            color: '#f9f9fb'
+      contact_details:
+        - icon:
+            rounded_border: true
+            color: '#ffffff'
+            icon_size: small
+            icon_type: outline
+            hero_icon_name: envelope
+          text: 'Email address: mybusiness@business.com'
+        - icon:
+            rounded_border: true
+            color: white
+            icon_size: small
+            icon_type: outline
+            hero_icon_name: envelope
+          text: 'Email address: mybusiness@business.com'
+        - icon:
+            rounded_border: true
+            color: white
+            icon_size: small
+            icon_type: outline
+            hero_icon_name: envelope
+          text: 'Email address: mybusiness@business.com'
+        - icon:
+            rounded_border: true
+            color: white
+            icon_size: small
+            icon_type: outline
+            hero_icon_name: envelope
+          text: 'Email address: mybusiness@business.com'
+        - icon:
+            rounded_border: true
+            color:
+            icon_size: ''
+            icon_type: ''
+            hero_icon_name: ''
+          text: ''
+    styles:
+      orientation: Left
+      background_variant: Light
 ---
