--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -4,5 +4,31 @@ layout: layouts/page.html
 permalink: /
 draft: false
 eleventyExcludeFromCollections: false
-content_blocks: []
+content_blocks:
+  - _bookshop_name: sections/contact-block
+    content:
+      social_icons:
+        _bookshop_name: generic/social-icons
+        social_media_links:
+          - link_url: https://www.youtube.com/
+            svg_icon: /assets/images/icons/social/youtube.svg
+          - link_url: https://www.facebook.com/
+            svg_icon: /assets/images/icons/social/facebook.svg
+          - link_url: https://www.linkedin.com/
+            svg_icon: /assets/images/icons/social/linkedin.svg
+          - link_url: https://www.twitter.com/
+            svg_icon: /assets/images/icons/social/x.svg
+          - link_url: https://www.instagram.com/
+            svg_icon: /assets/images/icons/social/instagram.svg
+        style:
+          icon_background_hover_color: '#f9f9fb'
+          icon_color: '#f9f9fb'
+          icon_hover_color: '#000000'
+      heading:
+      description:
+      contact_details: []
+      button:
+    styles:
+      orientation:
+      background_variant: light
 ---
