Updated 1 file via CloudCannon.

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -25,7 +25,10 @@ content_blocks:
           icon_color: '#f9f9fb'
           icon_hover_color: '#000000'
       heading:
-      description:
+      description: >-
+        This is a simple yet powerful block to display not only your location by
+        using Google Maps, but also any other contact details you wish to share
+        with your customers.
       contact_details: []
       button:
     styles:
