Refactor: trying to force the labelled icons to default to a certain style

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -7,8 +7,9 @@ eleventyExcludeFromCollections: false
 content_blocks:
   - _bookshop_name: sections/contact-block
     content:
-      social_icons:
+      social_icons: true
       heading:
+        primary_heading: Test?
       description: >-
         This is a simple yet powerful block to display not only your location by
         using Google Maps, but also any other contact details you wish to share
