Updated 1 file via CloudCannon.

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -9,6 +9,8 @@ content_blocks:
     content:
       social_icons: true
       heading:
+        _bookshop_name: generic/component-heading
+        eyebrow_headline:
         primary_heading: Test?
       description: >-
         This is a simple yet powerful block to display not only your location by
@@ -26,7 +28,15 @@ content_blocks:
             rounded_border: false
             color: '#f9f9fb'
       button:
+        _bookshop_name: generic/button
+        url: '#'
+        open_in_new_tab: false
+        text: Button text
+        variant: primary
+        disabled: false
+        arrow: right
+        onclick:
     styles:
-      orientation:
+      orientation: Left
       background_variant: light
 ---
