Refactor: changed the way the labelled-icons work in cloudcannon

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -9,24 +9,24 @@ content_blocks:
     content:
       social_icons: true
       heading:
-        primary_heading: Test?
+        primary_heading: A contact block
       description: >-
         This is a simple yet powerful block to display not only your location by
         using Google Maps, but also any other contact details you wish to share
         with your customers.
       contact_details:
-        - _bookshop_name: generic/labelled-icon
-          arrangement: inline
-          text: test?
-          icon:
-            _bookshop_name: generic/icon
-            hero_icon_name: academic-cap
-            icon_size: small
-            icon_type: solid
-            rounded_border: false
-            color: '#f9f9fb'
+        - text: 'My email @ email . com'
+          hero_icon_name: 'envelope'
       button:
+        _bookshop_name: generic/button
+        url: '#'
+        open_in_new_tab: false
+        text: Button text
+        variant: primary
+        disabled: false
+        arrow: right
+        onclick:
     styles:
       orientation:
-      background_variant: light
+      background_variant: Dark
 ---
