--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -9,19 +9,23 @@ content_blocks:
     content:
       social_icons: true
       heading:
-        primary_heading: A contact block
+        _bookshop_name: generic/component-heading
+        eyebrow_headline: Eyebrow Heading
+        primary_heading: Primary Heading
       description: >-
         This is a simple yet powerful block to display not only your location by
         using Google Maps, but also any other contact details you wish to share
         with your customers.
       contact_details:
-        - text: 'My email @ email . com'
-          hero_icon_name: 'envelope'
+        - text: mybusiness@business.com
+          hero_icon_name: envelope
+        - text: mybusiness@business.com
+          hero_icon_name: envelope
       button:
         _bookshop_name: generic/button
         url: '#'
         open_in_new_tab: false
-        text: Button text
+        text: Book now
         variant: primary
         disabled: false
         arrow: right
