Chore: Added icon for block; minor tweaks to config

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -28,5 +28,5 @@ content_blocks:
         onclick:
     styles:
       orientation: Left
-      background_variant: Dark
+      background_variant: dark
 ---
