Updated 1 file via CloudCannon.

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -4,33 +4,5 @@ layout: layouts/page.html
 permalink: /
 draft: false
 eleventyExcludeFromCollections: false
-content_blocks:
-  - _bookshop_name: sections/contact-block
-    content:
-      social_icons: true
-      heading:
-        _bookshop_name: generic/component-heading
-        eyebrow_headline: Eyebrow Heading
-        primary_heading: Primary Heading
-      description: >-
-        This is a simple yet powerful block to display not only your location by
-        using Google Maps, but also any other contact details you wish to share
-        with your customers.
-      contact_details:
-        - text: mybusiness@business.com
-          hero_icon_name: envelope
-        - text: mybusiness@business.com
-          hero_icon_name: envelope
-      button:
-        _bookshop_name: generic/button
-        url: '#'
-        open_in_new_tab: false
-        text: Book now
-        variant: primary
-        disabled: false
-        arrow: right
-        onclick:
-    styles:
-      orientation: Left
-      background_variant: dark
+content_blocks: []
 ---
