--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -20,6 +20,14 @@ content_blocks:
         - text: mybusiness@business.com
           hero_icon_name: envelope
       button:
+        _bookshop_name: generic/button
+        url: '#'
+        open_in_new_tab: false
+        text: Button text
+        variant: primary
+        disabled: false
+        arrow: right
+        onclick:
     styles:
       orientation: Left
       background_variant: dark
